--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -6,5 +6,13 @@
     <link rel="stylesheet" href="style.css" />
     <title>Password Generator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h1>Generate a<br /><span> Random Password</span></h1>
+      <div class="display">
+        <input type="text" id="Password" placeholder="Password" />
+        <img src="images/copy_icon.png" />
+      </div>
+    </div>
+  </body>
 </html>
