--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -13,6 +13,7 @@
         <input type="text" id="Password" placeholder="Password" />
         <img src="images/copy_icon.png" />
       </div>
+      <button><img src="images/generate_icon.png" />Generate Password</button>
     </div>
   </body>
 </html>
