Added tool list.

--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Web Tools</title>
   </head>
   <body>
     <h1>Here Are Some Awesome Tools!!!</h1>
+    <ul>
+      <li>Password Generator</li>
+      <li>QR Gnerator</li>
+    </ul>
   </body>
 </html>
