Added layout for homepage.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Web Tools</title>
   </head>
   <body>
-    <h1>Here Are Some Awesome Tools!!!</h1>
-    <ul>
-      <li>Password Generator</li>
-      <li>QR Gnerator</li>
-    </ul>
+    <div>
+      <h1>Here Are Some Awesome Tools!!!</h1>
+      <ul>
+        <li><a href="Password Generator/index.html">Password Generator</a></li>
+        <li><a href="QR Generator/index.html">QR Gnerator</a></li>
+      </ul>
+    </div>
   </body>
 </html>
