Added Buttons to main page

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <div>
       <h1>Here Are Some Awesome Tools!!!</h1>
       <ul>
-        <li><a href="Password Generator/index.html">Password Generator</a></li>
-        <li><a href="QR Generator/index.html">QR Gnerator</a></li>
+        <li><button><a href="Password Generator/index.html">Password Generator</a></button></li>
+        <li><button><a href="QR Generator/index.html">QR Gnerator</a></button></li>
+        <li><button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button></li>
       </ul>
     </div>
   </body>
