--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <link rel="stylesheet" href="style.css" />
     <title>Web Tools</title>
   </head>
+
   <body>
+    <h1>Here Are Some Awesome Tools!!!</h1>
     <div>
-      <h1>Here Are Some Awesome Tools!!!</h1>
-      <ul>
-        <li><button><a href="Password Generator/index.html">Password Generator</a></button></li>
-        <li><button><a href="QR Generator/index.html">QR Gnerator</a></button></li>
-        <li><button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button></li>
-      </ul>
+      <button><a href="QR Generator/index.html">QR Gnerator</a></button>
+      <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
+      <button><a href="Password Generator/index.html">Password Generator</a></button>
     </div>
   </body>
 </html>
