Added layout for input field

--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -6,5 +6,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>Weather App Widget</title>
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <div class="search">
+        <input type="text" placeholder="Enter city name" spellcheck="false" />
+        <button><img src="images/search.png" /></button>
+      </div>
+    </div>
+  </body>
 </html>
