--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Weather App Widget</title>
+    <script src="script.js"></script>
   </head>
   <body>
     <div class="card">
@@ -27,7 +28,7 @@
           <div class="col">
             <img src="images/wind.png" />
             <div>
-              <p class="humidity">15 Kmpa</p>
+              <p class="humidity">15 km/h</p>
               <p>Wind Speed</p>
             </div>
           </div>
