--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -15,20 +15,20 @@
       </div>
       <div class="weather">
         <img src="images/rain.png" class="weather-icon" />
-        <h1 class="temp">22°</h1>
-        <h2 class="city">New York</h2>
+        <h1 class="temp">28 °C</h1>
+        <h2 class="city">Kanpur</h2>
         <div class="details">
           <div class="col">
             <img src="images/humidity.png" />
             <div>
-              <p class="humidity">50%</p>
+              <p class="humidity">10%</p>
               <p>Humidity</p>
             </div>
           </div>
           <div class="col">
             <img src="images/wind.png" />
             <div>
-              <p class="humidity">15 km/h</p>
+              <p class="wind">3 km/h</p>
               <p>Wind Speed</p>
             </div>
           </div>
