Added new project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button><a href="QR Generator/index.html">QR Gnerator</a></button>
       <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
       <button><a href="Password Generator/index.html">Password Generator</a></button>
+      <button><a href="Weather App/index.html">Weather App</a></button>
     </div>
   </body>
 </html>
