--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -1,39 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Weather App Widget</title>
-    <script src="script.js"></script>
-  </head>
-  <body>
-    <div class="card">
-      <div class="search">
-        <input type="text" placeholder="Enter city name" spellcheck="false" />
-        <button><img src="images/search.png" /></button>
-      </div>
-      <div class="weather">
-        <img src="images/rain.png" class="weather-icon" />
-        <h1 class="temp">28 °C</h1>
-        <h2 class="city">Kanpur</h2>
-        <div class="details">
-          <div class="col">
-            <img src="images/humidity.png" />
-            <div>
-              <p class="humidity">10%</p>
-              <p>Humidity</p>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Weather App Widget</title>
+</head>
+
+<body>
+  <div class="card">
+    <div class="search">
+      <input type="text" placeholder="Enter city name" spellcheck="false" />
+      <button><img src="images/search.png" /></button>
+    </div>
+    <div class="weather">
+      <img src="images/rain.png" class="weather-icon" />
+      <h1 class="temp">28 °C</h1>
+      <h2 class="city">Kanpur</h2>
+      <div class="details">
+        <div class="col">
+          <img src="images/humidity.png" />
+          <div>
+            <p class="humidity">10%</p>
+            <p>Humidity</p>
           </div>
-          <div class="col">
-            <img src="images/wind.png" />
-            <div>
-              <p class="wind">3 km/h</p>
-              <p>Wind Speed</p>
-            </div>
+        </div>
+        <div class="col">
+          <img src="images/wind.png" />
+          <div>
+            <p class="wind">3 km/h</p>
+            <p>Wind Speed</p>
           </div>
         </div>
       </div>
     </div>
-  </body>
+  </div>
+  <script>
+    const apiKey = "08b8dfdef863b1d3dc42087532e6b63e";
+    const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+    const searchBox = document.querySelector(".search input");
+    const searchBtn = document.querySelector(".search button");
+
+    async function checkWeather(city) {
+      const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
+      var data = await response.json();
+
+      console.log(data);
+
+      document.querySelector(".city").innerHTML = data.name;
+      document.querySelector(".temp").innerHTML = data.main.temp + " °C";
+      document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
+      document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+    }
+
+
+    searchBtn.addEventListener("click", () => {
+      checkWeather(searchBox.value);
+    })
+  </script>
+</body>
+
 </html>
