--- a/Weather App/index.html
+++ b/Weather App/index.html
@@ -41,6 +41,7 @@
     const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
     const searchBox = document.querySelector(".search input");
     const searchBtn = document.querySelector(".search button");
+    const icon = document.querySelector(".weather-icon")
 
     async function checkWeather(city) {
       const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
@@ -52,6 +53,27 @@
       document.querySelector(".temp").innerHTML = data.main.temp + " °C";
       document.querySelector(".humidity").innerHTML = data.main.humidity + "%";
       document.querySelector(".wind").innerHTML = data.wind.speed + " km/h";
+
+      if (data.weather[0].main == "Clouds") {
+        icon.src = "images/clouds.png";
+      }
+      else if (data.weather[0].main == "Clear") {
+        icon.src = "images/clear.png";
+      }
+      else if (data.weather[0].main == "Rain") {
+        icon.src = "images/rain.png";
+      }
+      else if (data.weather[0].main == "Drizzle") {
+        icon.src = "images/drizzle.png";
+      }
+      else if (data.weather[0].main == "Mist") {
+        icon.src = "images/mist.png";
+      }
+      else if (data.weather[0].main == "Snow") {
+        icon.src = "images/snow.png";
+      }
+
+
     }
 
 
