--- a/Notes App/index.html
+++ b/Notes App/index.html
@@ -10,9 +10,8 @@
 
 <body>
     <div class="container">
-        <h1>Notes📝</h1>
-
-        <!-- Start from here tommorow!!!!! -->
+        <h1><img src="images/notes.png" alt="">Notes📝</h1>
+        <button><img src="images/edit.png" alt="">Create Notes</button>
     </div>
 
 </body>
