--- a/Notes App/index.html
+++ b/Notes App/index.html
@@ -5,15 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Notes App</title>
+    <title>Notes App 📝</title>
 </head>
 
 <body>
     <div class="container">
-        <h1><img src="images/notes.png" alt="">Notes📝</h1>
-        <button><img src="images/edit.png" alt="">Create Notes</button>
+        <h1><img src="images/notes.png">Notes</h1>
+        <button class="btn"><img src="images/edit.png">Create Notes</button>
+        <div class="notes-container">
+            <!-- <p contenteditable="true" class="input-box">
+                <img src="images/delete.png">
+            </p> -->
+        </div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
