--- a/Quiz App/index.html
+++ b/Quiz App/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Quizz App</title>
 </head>
+
 <body>
     <div class="app">
-        
+        <h1>Basic Quizz App</h1>
+        <div class="quiz">
+            <h2 id="question">Question Goes Here..</h2>
+            <div class="answer-buttons">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+            </div>
+        </div>
     </div>
 </body>
+
 </html>
