--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style.css" />
-    <title>Web Tools</title>
-  </head>
 
-  <body>
-    <h1>Here Are Some Awesome Tools!!!</h1>
-    <div>
-      <button><a href="QR Generator/index.html">QR Gnerator</a></button>
-      <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
-      <button><a href="Password Generator/index.html">Password Generator</a></button>
-      <button><a href="Weather App/index.html">Weather App</a></button>
-    </div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css" />
+  <title>Web Tools</title>
+</head>
+
+<body>
+  <h1>Here Are Some Awesome Tools!!!</h1>
+  <div>
+    <button><a href="QR Generator/index.html">QR Gnerator</a></button>
+    <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
+    <button><a href="Password Generator/index.html">Password Generator</a></button>
+    <button><a href="Weather App/index.html">Weather App</a></button>
+    <button><a href="Seasons Scenery/index.html">Seasons Scenery</a></button>
+  </div>
+</body>
+
 </html>
