--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <button><a href="Password Generator/index.html">Password Generator</a></button>
     <button><a href="Weather App/index.html">Weather App</a></button>
     <button><a href="Seasons Scenery/index.html">Seasons Scenery</a></button>
+    <button><a href="Quiz App/index.html">Simple Quiz</a></button>
+
   </div>
 </body>
 
