--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Here Are Some Awesome Tools!!!</h1>
   <div>
-    <button><a href="QR Generator/index.html">QR Gnerator</a></button>
+    <button><a href="QR Generator/index.html">QR Generator</a></button>
     <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
     <button><a href="Password Generator/index.html">Password Generator</a></button>
     <button><a href="Weather App/index.html">Weather App</a></button>
