added basic template structure

--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <div>
-        <h1>Daily Quotes📜</h1>
+    <div class="quote-box">
+        <h2>Quote of the day📜</h2>
         <blockquote>Loading....</blockquote>
         <span>Loading...</span>
     </div>
