--- a/Quote Generator/index.html
+++ b/Quote Generator/index.html
@@ -13,6 +13,10 @@
         <h2>Quote of the day📜</h2>
         <blockquote>Loading....</blockquote>
         <span>Loading...</span>
+        <div>
+            <button>New Quote</button>
+            <button><img src="twitter.png" alt="">Tweet</button>
+        </div>
     </div>
 </body>
 
