--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <button><a href="Weather App/index.html">Weather App</a></button>
     <button><a href="Seasons Scenery/index.html">Seasons Scenery</a></button>
     <button><a href="Quiz App/index.html">Simple Quiz</a></button>
+    <button><a href="Quote Generator/index.html">Random Quotes</a></button>
 
   </div>
 </body>
