--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <button><a href="Seasons Scenery/index.html">Seasons Scenery</a></button>
     <button><a href="Quiz App/index.html">Simple Quiz</a></button>
     <button><a href="Quote Generator/index.html">Random Quotes</a></button>
+    <button><a href="Age Calculator/index.html">Age Calculator</a></button>
 
   </div>
 </body>
