--- a/Age Calculator/index.html
+++ b/Age Calculator/index.html
@@ -4,10 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Age Calculator</title>
 </head>
 
 <body>
+    <div class="container">
+        <div class="calculator">
+            <h1>🧮Age <span>Calculator</span></h1>
+            <div class="input-box">
+                <input type="date" id="date">
+                <button>Calculate</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 
