--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button><a href="QR Generator/index.html">QR Gnerator</a></button>
     <button><a href="Nav-bar Scroll Art/index.html">Navbar Art</a></button>
     <button><a href="Password Generator/index.html">Password Generator</a></button>
+    <button><a href="Notes App/index.html">Notes App</a></button>
     <button><a href="Weather App/index.html">Weather App</a></button>
     <button><a href="Seasons Scenery/index.html">Seasons Scenery</a></button>
     <button><a href="Quiz App/index.html">Simple Quiz</a></button>
