fixed syntax issues

--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -10,20 +10,21 @@
 
 <body>
 
-</body>
-<div class="container">
-    <div class="todo-app">
-        <h2>To-Do List <img src="images/icon.png"></h2>
-        <div class="row">
-            <input type="text" id="input-box" placeholder="Add your text">
-            <button>Add</button>
-        </div>
-        <ul id="list-container">
-            <!-- <li class="checked">Task 1</li>
+    <div class="container">
+        <div class="todo-app">
+            <h2>To-Do List <img src="images/icon.png"></h2>
+            <div class="row">
+                <input type="text" id="input-box" placeholder="Add your text">
+                <button>Add</button>
+            </div>
+            <ul id="list-container">
+                <!-- <li class="checked">Task 1</li>
             <li>Task 2</li>
             <li>Task 3</li> -->
-        </ul>
+            </ul>
+        </div>
     </div>
-</div>
+    <script src="script.js"></script>
+</body>
 
 </html>
