--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -15,12 +15,9 @@
             <h2>To-Do List <img src="images/icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
-                <button>Add</button>
+                <button onclick="addTask()">Add</button>
             </div>
             <ul id="list-container">
-                <!-- <li class="checked">Task 1</li>
-            <li>Task 2</li>
-            <li>Task 3</li> -->
             </ul>
         </div>
     </div>
