--- a/index.html
+++ b/index.html
@@ -2,65 +2,18 @@
 <html>
 
 <head>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      background-color: #f0f0f0;
-      font-family: Arial, sans-serif;
-    }
-
-    h1 {
-      margin-bottom: 50px;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-      gap: 20px;
-      width: 80%;
-      justify-content: center;
-    }
-
-    .button {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 15px;
-      font-size: 24px;
-      cursor: pointer;
-      text-align: center;
-      text-decoration: none;
-      outline: none;
-      color: #fff;
-      background-color: #4CAF50;
-      border: none;
-      border-radius: 15px;
-      box-shadow: 0 9px #999;
-    }
-
-    .button:hover {
-      background-color: #3e8e41
-    }
-
-    .button:active {
-      background-color: #3e8e41;
-      box-shadow: 0 5px #666;
-      transform: translateY(4px);
-    }
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  <title>Mini WebTools</title>
 </head>
 
 <body>
-  <h1>Your Main Web Page</h1>
+  <h1>Mini Web Tools</h1>
   <div class="grid">
     <a href="link_to_your_mini_app_1" class="button">Mini App 1</a>
     <a href="link_to_your_mini_app_2" class="button">Mini App 2</a>
-    <!-- Add more buttons as needed -->
   </div>
 </body>
 
