Updated New Buttons

--- a/index.html
+++ b/index.html
@@ -12,8 +12,22 @@
 <body>
   <h1>Mini Web Tools</h1>
   <div class="grid">
-    <a href="link_to_your_mini_app_1" class="button">Mini App 1</a>
-    <a href="link_to_your_mini_app_2" class="button">Mini App 2</a>
+    <a href="Age Calculator/index.html" class="button">Age Calculator</a>
+    <a href="Notes App/index.html" class="button">Notes App</a>
+    <a href="To-Do/index.html" class="button">ToDo List</a>
+    <a href="Weather App/index.html" class="button">Weather App</a>
+    <a href="Quote Generator/index.html" class="button">Random Quotes</a>
+    <a href="Seasons Scenery/index.html" class="button">Seasons Scenery</a>
+    <a href="Quiz App/index.html" class="button">Quiz App</a>
+    <a href="Password Generator/index.html" class="button">Password Generator</a>
+    <a href="Nav-bar Scroll Art/index.html" class="button">Scroll Art</a>
+    <a href="QR Generator/index.html" class="button">QR Generator</a>
+
+
+
+
+
+
   </div>
 </body>
 
