--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <a href="Password Generator/index.html" class="button">Password Generator</a>
     <a href="Nav-bar Scroll Art/index.html" class="button">Scroll Art</a>
     <a href="QR Generator/index.html" class="button">QR Generator</a>
+    <a href="Emoji Keyboard/index.html" class="button">Emoji Keyboard</a>
 
 
 
