Added liquid mask

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="Quote Generator/index.html" class="button">Random Quotes</a>
     <a href="Seasons Scenery/index.html" class="button">Seasons Scenery</a>
     <a href="Quiz App/index.html" class="button">Quiz App</a>
+    <a href="Liquid Mask/index.html" class="button">Liquid Mask</a>
     <a href="Password Generator/index.html" class="button">Password Generator</a>
     <a href="Nav-bar Scroll Art/index.html" class="button">Scroll Art</a>
     <a href="QR Generator/index.html" class="button">QR Generator</a>
