--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <a href="Password Generator/index.html" class="button">Password Generator</a>
     <a href="Nav-bar Scroll Art/index.html" class="button">Scroll Art</a>
     <a href="QR Generator/index.html" class="button">QR Generator</a>
+    <a href="Countdown/index.html" class="button">Countdown Screen</a>
     <a href="Emoji Keyboard/index.html" class="button">Emoji Keyboard</a>
 
 
