--- a/Notes App/index.html
+++ b/Notes App/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="container">
-        <h1><img src="images/notes.png">Notes</h1>
-        <button class="btn"><img src="images/edit.png">Create Notes</button>
+        <h1><img src="assets/notes.png">Notes</h1>
+        <button class="btn"><img src="assets/edit.png">Create Notes</button>
         <div class="notes-container">
         </div>
     </div>
