--- a/To-Do/index.html
+++ b/To-Do/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>To Do List</title>
 </head>
@@ -12,7 +13,7 @@
 
     <div class="container">
         <div class="todo-app">
-            <h2>To-Do List <img src="images/icon.png"></h2>
+            <h2>To-Do List <img src="assets/icon.png"></h2>
             <div class="row">
                 <input type="text" id="input-box" placeholder="Add your text">
                 <button onclick="addTask()">Add</button>
