--- a/Seasons Scenery/index.html
+++ b/Seasons Scenery/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Parallax Seasons</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
 
 </head>
