--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -1,54 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Password Generator</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Generate a<br /><span> Random Password</span></h1>
-      <div class="display">
-        <input type="text" id="password" placeholder="Password" />
-        <img src="images/copy_icon.png" onclick="copyPassword()" />
-      </div>
-      <button onclick="createPassword()">
-        <img src="images/generate_icon.png" />Generate Password
-      </button>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css" />
+  <title>Password Generator</title>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Generate a<br /><span> Random Password</span></h1>
+    <div class="display">
+      <input type="text" id="password" placeholder="Password" />
+      <img src="assets/copy_icon.png" onclick="copyPassword()" />
     </div>
+    <button onclick="createPassword()">
+      <img src="assets/generate_icon.png" />Generate Password
+    </button>
+  </div>
 
-    <script>
-      const passwordBox = document.getElementById("password");
-      const length = 12;
+  <script>
+    const passwordBox = document.getElementById("password");
+    const length = 12;
 
-      // dataStrings
-      const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-      const lowerCase = "abcdefghijklmnopqrstuvwxyz";
-      const numbers = "0123456789";
-      const symbols = "@#$%*_+-~></=";
+    // dataStrings
+    const upperCase = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
+    const lowerCase = "abcdefghijklmnopqrstuvwxyz";
+    const numbers = "0123456789";
+    const symbols = "@#$%*_+-~></=";
 
-      charMix = upperCase + lowerCase + numbers + symbols;
+    charMix = upperCase + lowerCase + numbers + symbols;
 
-      // password generator funtion
-      function createPassword() {
-        let password = "";
-        password += upperCase[Math.floor(Math.random() * upperCase.length)];
-        password += lowerCase[Math.floor(Math.random() * lowerCase.length)];
-        password += numbers[Math.floor(Math.random() * numbers.length)];
-        password += symbols[Math.floor(Math.random() * symbols.length)];
+    // password generator funtion
+    function createPassword() {
+      let password = "";
+      password += upperCase[Math.floor(Math.random() * upperCase.length)];
+      password += lowerCase[Math.floor(Math.random() * lowerCase.length)];
+      password += numbers[Math.floor(Math.random() * numbers.length)];
+      password += symbols[Math.floor(Math.random() * symbols.length)];
 
-        while (length > password.length) {
-          password += charMix[Math.floor(Math.random() * charMix.length)];
-        }
-
-        passwordBox.value = password;
+      while (length > password.length) {
+        password += charMix[Math.floor(Math.random() * charMix.length)];
       }
 
-      function copyPassword() {
-        passwordBox.select();
-        document.execCommand("copy");
-      }
-    </script>
-  </body>
+      passwordBox.value = password;
+    }
+
+    function copyPassword() {
+      passwordBox.select();
+      document.execCommand("copy");
+    }
+  </script>
+</body>
+
 </html>
