--- a/Countdown/index.html
+++ b/Countdown/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Countdown Screen
   </title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="./style.css">
 
 </head>
