--- a/Emoji Keyboard/index.html
+++ b/Emoji Keyboard/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <title>Emoji Keyboard</title>
   <link rel="stylesheet" href="./style.css">
 </head>
