--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Mini WebTools</title>
 </head>
 
 <body>
-  <h1>Mini Web Tools</h1>
+  <h1>Mini Web Tools ✨</h1>
   <div class="grid">
     <a href="Age Calculator/index.html" class="button">Age Calculator</a>
     <a href="Notes App/index.html" class="button">Notes App</a>
