--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="QR Generator/index.html" class="button">QR Generator</a>
     <a href="Countdown/index.html" class="button">Countdown Screen</a>
     <a href="Emoji Keyboard/index.html" class="button">Emoji Keyboard</a>
+    <a href="Rotating Cube/index.html" class="button">3D Cube</a>
 
 
 
