--- a/Dino Sliders/index.html
+++ b/Dino Sliders/index.html
@@ -9,7 +9,23 @@
 </head>
 
 <body>
-  <h1>Dino Sliders</h1>
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
+
+  <div class="slider">
+    <div class="list">
+      <div class="item">
+        <img src="images/tRex.jpg" alt="">
+      </div>
+    </div>
+  </div>
+
+
   <script src="script.js"></script>
 </body>
 
