add raw info for cards

--- a/Dino Sliders/index.html
+++ b/Dino Sliders/index.html
@@ -20,7 +20,75 @@
   <div class="slider">
     <div class="list">
       <div class="item">
-        <img src="images/tRex.jpg" alt="">
+        <img src="images/tRex.jpg">
+        <div class="content">
+          <div class="period">Cretaceous</div>
+          <div class="type">Carnivore</div>
+          <div class="name">Tyrannosaurus Rex</div>
+          <div class="description">
+            Tyrannosaurus rex, or T. rex, was a massive bipedal carnivore that lived in western North America around
+            72.7 to 66 million years ago. Despite its large size, it had short but strong forelimbs with two clawed
+            digits. Known for its powerful jaws and sharp teeth, T. rex was one of the largest known land predators. Its
+            keen sense of smell made it an adept hunter.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/spinosaurous.jpg">
+        <div class="content">
+          <div class="period">Cretaceous</div>
+          <div class="type">Carnivore</div>
+          <div class="name">Spinosaurus</div>
+          <div class="description">
+            Spinosaurus was a spinosaurid dinosaur that lived in North Africa during the Late Cretaceous period, about
+            99 to 93.5 million years ago. It was the longest known terrestrial carnivore, with an estimated length of up
+            to 14 meters. Its most distinctive feature was the long extensions of the vertebrae, forming a sail-like
+            structure. It is believed to have hunted both terrestrial and aquatic prey.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/triceratops.jpg">
+        <div class="content">
+          <div class="period">Cretaceous</div>
+          <div class="type">Herbivore</div>
+          <div class="name">Triceratops</div>
+          <div class="description">
+            Triceratops was a herbivorous dinosaur known for its three horns and large bony frill. It lived during the
+            Late Cretaceous period and was one of the last non-avian dinosaurs. Triceratops is the most commonly found
+            dinosaur in the uppermost Cretaceous deposits of western North America.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/velociraptor.jpg">
+        <div class="content">
+          <div class="period">Cretaceous</div>
+          <div class="type">Carniivore</div>
+          <div class="name">Velociraptor</div>
+          <div class="description">
+            Velociraptor, often depicted in popular media, was a small carnivorous dinosaur that lived during the Late
+            Cretaceous epoch in Asia. Known for its speed and agility, it had a long tail and an enlarged sickle-shaped
+            claw on each hindfoot, which it likely used to tackle and restrain prey. Despite its fierce reputation,
+            Velociraptor was about the size of a turkey.
+          </div>
+          <div class="buttons">
+            <button>SEE MORE</button>
+            <button>SUBSCRIBE</button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
