--- a/Dino Sliders/index.html
+++ b/Dino Sliders/index.html
@@ -17,14 +17,14 @@
     </nav>
   </header>
 
-  <div class="slider">
+  <div class="slider prev">
     <div class="list">
       <div class="item">
         <img src="images/tRex.jpg">
         <div class="content">
-          <div class="name">Tyrannosaurus Rex</div>
-          <div class="period">Cretaceous</div>
           <div class="type">Carnivore</div>
+          <div class="period">Cretaceous</div>
+          <div class="name">Tyrannosaurus Rex</div>
           <div class="description">
             Tyrannosaurus rex, or T. rex, was a massive bipedal carnivore that lived in western North America around
             72.7 to 66 million years ago. Despite its large size, it had short but strong forelimbs with two clawed
@@ -40,9 +40,9 @@
       <div class="item">
         <img src="images/spinosaurous.jpg">
         <div class="content">
-          <div class="name">Spinosaurus</div>
-          <div class="period">Cretaceous</div>
           <div class="type">Carnivore</div>
+          <div class="period">Cretaceous</div>
+          <div class="name">Spinosaurus</div>
           <div class="description">
             Spinosaurus was a spinosaurid dinosaur that lived in North Africa during the Late Cretaceous period, about
             99 to 93.5 million years ago. It was the longest known terrestrial carnivore, with an estimated length of up
@@ -58,9 +58,9 @@
       <div class="item">
         <img src="images/triceratops.jpg">
         <div class="content">
-          <div class="name">Triceratops</div>
-          <div class="period">Cretaceous</div>
           <div class="type">Herbivore</div>
+          <div class="period">Cretaceous</div>
+          <div class="name">Triceratops</div>
           <div class="description">
             Triceratops was a herbivorous dinosaur known for its three horns and large bony frill. It lived during the
             Late Cretaceous period and was one of the last non-avian dinosaurs. Triceratops is the most commonly found
@@ -75,9 +75,9 @@
       <div class="item">
         <img src="images/velociraptor.jpg">
         <div class="content">
-          <div class="name">Velociraptor</div>
+          <div class="type">Carnivore</div>
           <div class="period">Cretaceous</div>
-          <div class="type">Carniivore</div>
+          <div class="name">Velociraptor</div>
           <div class="description">
             Velociraptor, often depicted in popular media, was a small carnivorous dinosaur that lived during the Late
             Cretaceous epoch in Asia. Known for its speed and agility, it had a long tail and an enlarged sickle-shaped
@@ -91,6 +91,44 @@
         </div>
       </div>
     </div>
+
+    <div class="thumbnail">
+      <div class="item">
+        <img src="images/tRex.jpg">
+        <div class="content">
+          <div class="title">Tyrannosaurus Rex</div>
+          <div class="des">Emperor</div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/spinosaurous.jpg">
+        <div class="content">
+          <div class="title">Spinosaurus</div>
+          <div class="des">Monster</div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/triceratops.jpg">
+        <div class="content">
+          <div class="title">Triceratops</div>
+          <div class="des">Fortress</div>
+        </div>
+      </div>
+      <div class="item">
+        <img src="images/velociraptor.jpg">
+        <div class="content">
+          <div class="title">Velociraptor</div>
+          <div class="des">Predator</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="arrows">
+      <button id="prev">
+        < </button>
+          <button id="next">></button>
+    </div>
+
   </div>
 
 
