--- a/Dino Sliders/index.html
+++ b/Dino Sliders/index.html
@@ -17,7 +17,7 @@
     </nav>
   </header>
 
-  <div class="slider prev">
+  <div class="slider">
     <div class="list">
       <div class="item">
         <img src="images/tRex.jpg">
@@ -128,6 +128,8 @@
         < </button>
           <button id="next">></button>
     </div>
+
+    <div class="time"></div>
 
   </div>
 
