--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <a href="Countdown/index.html" class="button">Countdown Screen</a>
     <a href="Emoji Keyboard/index.html" class="button">Emoji Keyboard</a>
     <a href="Rotating Cube/index.html" class="button">3D Cube</a>
+    <a href="Dino Sliders/index.html" class="button">Dino Sliders</a>
 
 
 
