--- a/index.html
+++ b/index.html
@@ -27,11 +27,9 @@
     <a href="Emoji Keyboard/index.html" class="button">Emoji Keyboard</a>
     <a href="Rotating Cube/index.html" class="button">3D Cube</a>
     <a href="Dino Sliders/index.html" class="button">Dino Sliders</a>
-
-
-
-
-
+    <a href="Animated Login Form/index.html" class="button">Animated Form</a>
+    <a href="Neon Clock/index.html" class="button">Neon Clock</a>
+    <a href="Shrink and Grow/index.html" class="button">Shrink and Grow</a>
 
   </div>
 </body>
